--- a/index.html
+++ b/index.html
@@ -6,10 +6,10 @@
 <link href="lab/base.css" rel="stylesheet">
 <link href="lab/lab.css" rel="stylesheet">
 <link href="lab/lab.codemirror.css" rel="stylesheet">
-<h1>TinyTurtle Lab</h1>
+<h1>TinyTurtle Programmeerles</h1>
 <div id="labs"></div>
 <footer>
-  [ <a href="http://github.com/toolness/tiny-turtle" target="_blank">GitHub</a>
+  [ <a href="http://github.com/jieter/tiny-turtle" target="_blank">GitHub</a>
     | <a href="tutorial/">Tutorial</a>
     | <a id="togetherjs" href="#">Invite a Friend</a>
   ]
@@ -54,7 +54,7 @@ function initLab(id, defaultContent) {
 }
 
 function initLabs() {
-  var panes = parseInt((location.search.match(/panes=([1-9])/) || [0,1])[1]);
+  var panes = parseInt((location.search.match(/panes=([1-9])/) || [0, 1])[1]);
   var sampleCode = $("#sample").textContent.trim();
 
   for (var i = 0; i < panes; i++)
