--- a/tutorial/index.html
+++ b/tutorial/index.html
@@ -6,93 +6,58 @@
 <link rel="stylesheet" href="../lab/lab.css">
 <link rel="stylesheet" href="../lab/lab.codemirror.css">
 <link rel="stylesheet" href="highlight.css">
-<title>TinyTurtle Tutorial</title>
-<h1>TinyTurtle Tutorial</h1>
-
-<p>
-  Before embarking on this journey, you may want to check out
-  <a href="http://jsforcats.com">JavaScript For Cats</a> or
-  <a href="http://eloquentjavascript.net/">Eloquent JavaScript</a> to 
-  understand the basics of the language. Or you can just start hacking
-  and learn things from the <a href="glossary.html">glossary</a> as you go.
-</p>
+<title>TinyTurtle Programmeerles</title>
+<h1>TinyTurtle Programmeerles</h1>
 
 <aside class="panel">
-  <h3><a id="tips" href="#tips">Tinkering Tips</a></h3>
+    <h3><a id="tips" href="#tips">Tips</a></h3>
 
-  <blockquote>
-    Programmers care more about making it work <em>eventually</em> rather
-    than trying to make it work the very first time. The best way to
-    learn is by making mistakes!
-    <cite><a href="https://twitter.com/maxogden">@maxogden</a>,
-      JavaScript for Cats</cite>
-  </blockquote>
+    <blockquote>
+        Het hoeft niet direct goed te zijn. Het gaat om wat je wilt bereiken.
+        Dat je daar een paar pogingen voor nodig hebt maakt niet uit.
+    </blockquote>
 
-  <p>
-    <strong>Fear not.</strong> Nothing you type on this page will damage
-    your computer in any way. Programming is all about tinkering, with
-    curiosity guiding your path.
-  </p>
+    <p>
+        <strong>Fouten maken mag!</strong> Je kunt niets kapotmaken aan deze computer door wat je hier intyped.
+    </p>
+    <p>
+        <strong>Wees precies</strong> Computers moet je precieze opdrachten geven.
+        Als je er maar een beetje van afwijkt, krijg je een foutmelding.
+        Kijk bij het regelnummer uit de foutmelding of je misschien iets bent vergeten.
+    </p>
+    <p>
+        <strong>Vraag om hulp.</strong> Loop je vast? Je kunt altijd <a onclick="TogetherJS(this);">iemand om hulp vragen</a> als je er niet uitkomt.
+    </p>
 
-  <p>
-    <strong>Play around.</strong> If you don't understand what a piece
-    of code is doing, try changing it. What happens when you remove the
-    code? Or when you change a number in it? Or when you copy and paste
-    it somewhere else? 
-  </p>
-
-  <p>
-    <strong>Ask for help.</strong> If you're stumped, you can always
-    <a onclick="TogetherJS(this);">invite a friend</a> to help you out.
-  </p>
 </aside>
 
-<h2><a id="square" href="#square">I. Square</a></h2>
-
-<blockquote>
-  Turtle geometry is a different style of doing geometry, just as Euclid’s 
-  axiomatic style and Descartes’s analytic style are different from one
-  another. Euclid’s is a <em>logical</em> style. Descartes’s is an
-  <em>algebraic</em> style. Turtle geometry is a <em>computational</em>
-  style of geometry.
-  <cite data-page="55">Seymour Papert, <em>Mindstorms</em></cite>
-</blockquote>
+<h2><a id="square" href="#square">I. Vierkant</a></h2>
 
 <p>
-  The TinyTurtle <a href="glossary.html#api">API</a> makes it easy to
-  experiment with Turtle geometry.
+    Vandaag gaan we leren programmeren met TinyTurtle. TinyTurtle is een schildpadje wat we kunnen besturen,
+    daarvoor heeft de schildpad een aantal commando's:
 </p>
 
 <p>
-  The <code>forward</code> function tells the Turtle to move forward by
-  some number of pixels.
+  <code>forward( stapjes )</code> laat de schildpad lopen.
 </p>
 
 <p>
-  The <code>right</code> function tells it to turn right by 
-  some number of degrees.
+  <code>right( hoek )</code> laat de schildpad een bocht naar rechts maken.
+0 = rechtdoor, 90 = naar rechts, 180 is omkeren, etc.
 </p>
 
 <p>
-  The <code>stamp</code> function tells it to draw its current
-  <em>state</em>: that is, its position and orientation. This is
-  visualized as a small, pointy triangle.
-</p>
-
-<p>
-  Can you add to the code below to make the Turtle draw a square 
-  100 pixels wide and end with the same state that it started?
+    Kan je de code hieronder aanpassen zodat de schildpad een vierkantje loopt van 100 bij 100 stapjes?
 </p>
 
 <script data-role="lab" type="javascript/lab">
 forward(100);
 right(90);
-
-stamp();
 </script>
 
-<script data-role="solution" type="javascript/lab" data-text="See Atul's solution">
-// Here is Atul's solution to the square problem.
+<script data-role="solution" type="javascript/lab" data-text="Jieters oplossing">
+// Dit is een mogelijke oplossing
 forward(100);
 right(90);
 forward(100);
@@ -101,193 +66,383 @@ forward(100);
 right(90);
 forward(100);
 right(90);
-
-stamp();
 </script>
 
 <aside class="panel">
-  <strong>Hint:</strong> If you're having trouble, try to "play Turtle."
-  Stand up and move your body as the Turtle on the screen must move in
-  order to make the pattern you want.
+  <strong>Hint:</strong> Als je het lastig vindt om dit te bedenken: probeer dan zelf te lopen als
+  de schildpad en te onthouden of op te schrijven wat je achtereenvolgens moet doen.
 </aside>
 
-<h2><a id="squares" href="#squares">II. Squares</a></h2>
+<h2><a id="squares" href="#squares">II. Vierkanten (variabelen)</a></h2>
 
 <p>
-  If we encapsulate our square-drawing code into a
-  <a href="glossary.html#function">function</a> that takes an
-  argument specifying the size of square to draw, we can use it as a building 
-  block for more interesting things.
+    Hierboven maakten we een vierkant van 100 stapjes.
+    Stel dat we nu een vierkant willen maken van 50 bij 50 stapjes.
+    Dan kunnen we natuurlijk vier keer de 100 in een 50 veranderen, maar dat wordt snel vervelend.
+
+    We hebben dan iets nodig wat we makkelijk kunnen aanpassen zonder alle plekken bij langs te gaan.
+
+    Zoiets noemen we een <em>variabele</em>.
+    Je kunt een variabele zien als bakje met een naam waar je iets in kunt bewaren, bijvoorbeeld het getal 50.
+    Overal waar je dan de naam van de variabele gebruikt, wordt door de computer de waarde 50 ingevuld.
 </p>
 
 <p>
-  Can you complete the code below?
+  Kun je hieronder met de <em>variabele</em> de schildpad een vierkant laten tekenen?
 </p>
 
 <script data-role="lab" type="javascript/lab">
-function square(width) {
-  // Fill in this function!
+// dit is een variabele met de naam 'stapjes'
+var stapjes = 50;
+
+forward(100);
+right(90);
+forward(100);
+right(90);
+forward(100);
+right(90);
+forward(100);
+right(90);
+
+</script>
+<p>
+    Verandert het vierkant van vorm als je de waarde aanpast?
+</p>
+
+<script data-role="solution" type="javascript/lab" data-text="Jieters oplossing">
+var stapjes = 50;
+
+forward(stapjes);
+right(90);
+forward(stapjes);
+right(90);
+forward(stapjes);
+right(90);
+forward(stapjes);
+right(90);
+</script>
+
+<p>
+    Kun je ook drie vierkanten tekenen (50, 75 en 100 stapjes)?
+<p>
+<script data-role="lab" type="javascript/lab">
+var stapjes = 50;
+
+
+</script>
+
+<script data-role="solution" type="javascript/lab" data-text="Jieters oplossing">
+var stapjes = 50;
+
+forward(stapjes);
+right(90);
+forward(stapjes);
+right(90);
+forward(stapjes);
+right(90);
+forward(stapjes);
+right(90);
+
+stapjes = 75;
+
+forward(stapjes);
+right(90);
+forward(stapjes);
+right(90);
+forward(stapjes);
+right(90);
+forward(stapjes);
+right(90);
+
+stapjes = 100;
+
+forward(stapjes);
+right(90);
+forward(stapjes);
+right(90);
+forward(stapjes);
+right(90);
+forward(stapjes);
+right(90);
+</script>
+
+<p>
+    Verder oefenen? Probeer een van de volgende plaatjes na te maken.
+</p>
+<p>
+    Soms is het ook handig om het commando <code>left( hoek )</code> te gebruiken.
+</p>
+
+<img src="voorbeeld1.png" style="width: 24%;" />
+<img src="voorbeeld2.png" style="width: 24%;" />
+<img src="voorbeeld3.png" style="width: 24%;" />
+<img src="voorbeeld4.png" style="width: 24%;" />
+
+<script data-role="lab" type="javascript/lab">
+
+</script>
+
+<h2><a id="squares-functions" href="#squares-functions">III. Vierkanten (functies)</a></h2>
+
+<p>
+    Nu kunnen we makkelijk de grootte van het vierkant aanpassen,
+    maar er staat nog steeds een hoop herhaling.
+    Mensen zijn niet zo goed in dingen veel herhalen: je maakt snel een foutje.
+    Computers kunnen dat wel heel goed.
+</p>
+<p>
+    Je kunt een verzameling commando's herhalen door ze in een soort receptje te stoppen.
+    Zo'n recept lijkt zelf ook weer op een commando, en noemen we een <em>functie</em>.
+</p>
+
+<p>
+    Kun je het voorbeeld hieronder zo aanpassen dat er twee vierkanten (50, 100 stapjes) worden getekend?
+</p>
+<script data-role="lab" type="javascript/lab">
+
+// dit is een functie, die een variabele 'stapjes' meekrijgt.
+// de waarde van de variabele hangt af van hoe ik het commando geef.
+function vierkant(stapjes) {
+
 }
 
-square(100);
-right(20);
-square(80);
-right(20);
-square(60);
-
-stamp();
+vierkant(100);
+vierkant(50);
 </script>
 
-<script data-role="solution" type="javascript/lab" data-text="See Atul's solution">
-// Here is Atul's solution to the squares problem.
+<script data-role="solution" type="javascript/lab" data-text="Jieters oplossing">
 function square(width) {
-  for (var i = 0; i < 4; i++) {
-    forward(width);
+    forward(stapjes);
     right(90);
-  }
+    forward(stapjes);
+    right(90);
+    forward(stapjes);
+    right(90);
+    forward(stapjes);
+    right(90);
 }
 
-square(100);
-right(20);
-square(80);
-right(20);
-square(60);
-
-stamp();
+vierkant(100);
+vierkant(50);
 </script>
 
-<aside class="panel">
-
-<h3><a id="refactoring" href="#refactoring">Code Is For People</a></h3>
-
-<blockquote>
-  Programs must be written for people to read, and only incidentally for machines to execute.
-  <cite>Hal Abelson &amp; Gerald Sussman,
-    Structure and Interpretation of Computer Programs</cite>
-</blockquote>
-
-<blockquote>
-  See, all my procedures are mind-size bites.
-  <cite data-page="103">Robert, a seventh grader, <em>Mindstorms</em></cite>
-</blockquote>
+<h2><a id="triangle" href="#triangle">IV. Driehoek (loops)</a></h2>
 
 <p>
-  Writing functions keeps our code compartmentalized
-  into mind-size bites that are easy for humans to understand. Whenever
-  you're having trouble understanding your own code&mdash;and
-  <em>especially</em> when you notice yourself copying-and-pasting lots of 
-  chunks of it&mdash;consider splitting it up into functions to make it
-  more concise and easier to grasp. This process is called
-  <em>refactoring</em> and it's a useful practice that even professional
-  programmers struggle to do regularly.
+    Alle vierkanten van eerder zijn een beetje saai geworden, kunnen we ook driehoeken maken?
 </p>
-</aside>
+<p>
+    Je hebt hierboven gezien dat je meerdere commando's achter elkaar kunt geven,
+    maar wat als je niet precies weet hoe vaak je iets wilt herhalen?
+</p>
+<p>
+    Of je wilt iets bijvoorbeeld 100 keer herhalen, dat is wel erg veel type-werk.
 
-<h2><a id="triangle" href="#triangle">III. Triangle</a></h2>
-
-<p>One of the principles of Turtle geometry is called the <strong>Total
-  Turtle Trip Theorem</strong>:
+    Gelukkig hebben we daar iets op bedacht, namelijk een loop.
 </p>
 
-<blockquote>
-  If a Turtle takes a trip around the boundary of any area and ends up in
-  the state in which it started, then the sum of all turns will be
-  360 degrees.
-  <cite data-page="76">Seymour Papert, Mindstorms</cite>
-</blockquote>
+
+<script data-role="lab" type="javascript/lab">
+
+for (var i = 0; i < 3; i++) {
+    forward(100);
+    right(WELKE_HOEK);
+}
+
+
+</script>
+
+<script data-role="solution" type="javascript/lab" data-text="Jieters oplossing">
+
+function driehoek(stapjes) {
+    forward(stapjes);
+    right(120);
+    forward(stapjes);
+    right(120);
+    forward(stapjes);
+    right(120);
+}
+
+driehoek(100);
+
+</script>
+
+<h2><a id="circle" href="#circle">IV. cirkel</a></h2>
 
 <p>
-  Can you use this theorem to fix the code below, which is trying to
-  draw an equilateral triangle and finish with the Turtle in the same
-  state that it started? You just need to replace <code>SOMETHING</code>
-  with an actual number.
+
 </p>
 
 <script data-role="lab" type="javascript/lab">
-for (var i = 0; i < 3; i++) {
-  forward(100);
-  right(SOMETHING);
+function cirkel(omtrek) {
+
 }
 
-stamp();
+cirkel(300);
 </script>
 
-<script data-role="solution" type="javascript/lab" data-text="See Atul's solution">
-// Here is Atul's solution to the triangle problem.
-for (var i = 0; i < 3; i++) {
-  forward(100);
-  // The turtle needs to make 3 identical turns to draw a triangle, and
-  // since they all need to add up to 360, that means each turn should be
-  // 360 divided by 3, or 120 degrees.
-  right(120);
-}
-
-stamp();
-</script>
-
-<h2><a id="circle" href="#circle">IV. Circle</a></h2>
-
-<p>
-  Can you use the Turtle Total Trip Theorem to finish this function that
-  draws a circle based on a given circumference, and returns with the
-  Turtle in its original state?
-</p>
-
-<script data-role="lab" type="javascript/lab">
-function circle(circumference) {
-  // Draw a circle here.
-}
-
-circle(300);
-stamp();
-</script>
-
-<script data-role="solution" type="javascript/lab" data-text="See Atul's solution">
-// Here is Atul's solution to the circle problem.
-
-function circle(circumference) {
-  // When we walk in a circle, we move forward a tiny bit and turn right
-  // a tiny bit. By the end, we will have traveled circumference distance
-  // and rotated 360 degrees.
+<script data-role="solution" type="javascript/lab" data-text="Jieters oplossing">
+function cirkel(omtrek) {
   for (var i = 0; i < 360; i++) {
-    forward(circumference / 360);
+    forward(omtrek / 360);
     right(1);
   }
 }
 
-circle(300);
-stamp();
+cirkel(300);
 </script>
 
 <aside class="panel">
-  <strong>Hint:</strong> It may help conceptually to think
-  of the circumference as the total distance the Turtle must travel
-  before it returns to its original state. Also, play Turtle!
+  <strong>Hint:</strong> De omtrek is het pad wat de schildpad moet lopen.
+  Als je er niet uit komt: doe de schildpad na!
 </aside>
 
-<h2><a id="going-further" href="#going-further">Going Further</a></h2>
+<h2><a id="hard" href="#hard">Extra opdrachten</a></h2>
 
+<img src="spiraal.png" class="example" />
+<p>Kun je dit voorbeeld na maken?</p>
+
+<div style="clear: both">&nbsp;</div>
+<script data-role="lab" type="javascript/lab">
+</script>
+<script data-role="solution" type="javascript/lab" data-text="Jieters oplossing">
+var stapjes = 2;
+for (var i = 0; i < 180; i++) {
+  forward(stapjes);
+  right(89.5);
+
+  stapjes += 2;
+}
+</script>
+
+<div style="clear: both">&nbsp;</div>
+<img src="random.png" class="example" />
 <p>
-  Playing with Turtle Graphics in this tutorial is nice, but you might
-  be wondering how to put your design into a real webpage. See the
-  <a href="https://github.com/toolness/tiny-turtle#readme">TinyTurtle
-  documentation</a> for instructions on how to do this.
+    Kan je deze ongeveer namaken, zodat hij er elke keer anders uitziet?
+</p>
+<p>
+    De functie <code>Math.random()</code> is een soort dobbelsteen:
+    hij levert elke keer een nieuw willekeurig getal tussen 0 en 1.
+    bijvoorbeeld 0.23, 0.46 of 0.91
 </p>
 
+<div style="clear: both">&nbsp;</div>
+<script data-role="lab" type="javascript/lab">
+function vierkant(stapjes) {
+    for(var i = 0; i < 4; i++) {
+        forward(stapjes);
+        right(90);
+    }
+}
+
+// Maak 10 vierkanten met een maat tussen 0 en 100
+for (var j = 0; j < 6; j++) {
+    vierkant(Math.random() * 100);
+}
+
+</script>
+<script data-role="solution" type="javascript/lab" data-text="Jieters oplossing">
+
+for (var i = 0; i < 2000; i++) {
+    right(Math.random() * 360);
+    forward(4);
+}
+</script>
+
+<div style="clear: both">&nbsp;</div>
+<img src="spirograph.png" class="example" />
 <p>
-  You might also want to take a look at the TinyTurtle source code,
-  <a href="https://github.com/toolness/tiny-turtle/blob/gh-pages/tiny-turtle.js">tiny-turtle.js</a>, to see how it works. It's pretty short, and reading other
-  people's code&mdash;especially code you use yourself&mdash;is one of the
-  best ways to learn. If you find bugs, you can even
-  <a href="https://github.com/toolness/tiny-turtle/issues">file an
-  issue</a> and fix it.
+    Maak voor deze opdracht eerst een functie die een cirkel tekent.
+</p>
+<p>
+    Met het commando <code>penUp()</code> tekent de schildpad even niet, met <code>penDown()</code>
+    tekent de schildpad weer verder.
 </p>
 
+<div style="clear: both">&nbsp;</div>
+<script data-role="lab" type="javascript/lab">
+
+for (var i = 0; i < 10; i++) {
+    forward(5);
+    penUp();
+    forward(5);
+    penDown();
+}
+
+
+</script>
+<script data-role="solution" type="javascript/lab" data-text="Jieters oplossing">
+// teken een cirkel met gegeven straal
+function cirkel(straal) {
+    penUp();
+    right(180);
+    forward(straal);
+    right(90);
+
+    penDown();
+    for (var j = 0; j < 360; j++) {
+        forward((straal * 2 * Math.PI) / 360);
+        right(1);
+    }
+    penUp();
+    right(90);
+    forward(straal);
+    penDown();
+}
+
+var straal = 50;
+
+penUp();
+right(180);
+forward(straal);
+right(90);
+
+for (var i = 0; i < 36; i++) {
+  cirkel(straal);
+  right(10);
+  penUp();
+  forward(10);
+}
+
+</script>
+<div style="clear: both">&nbsp;</div>
+<img src="boom.png" class="example" />
 <p>
-  Finally, consider reading <a href="http://www.amazon.com/Mindstorms-Children-Computers-Powerful-Ideas/dp/0465046746">Mindstorms</a> by Seymour Papert, which
-  explains the pedagogy behind Turtle graphics, among many other
-  revolutionary ideas about education.
+    Dit is een leuke om mee te spelen.
 </p>
+
+<script data-role="solution" type="javascript/lab" data-text="Jieters oplossing">
+
+function boom(size, aa, ab, sa, sb) {
+  if (size < 1) { return; }
+
+  forward(size);
+  left(aa);
+  boom(size * sa, aa, ab, sa, sb);
+
+  right(aa - ab);
+  boom(size * sb, aa, ab, sa, sb);
+
+  penUp();
+  left(-ab);
+  right(180);
+  forward(size);
+  right(180);
+  penDown();
+}
+penUp();
+right(180);
+forward(100);
+right(180);
+penDown();
+
+boom(60, 45, -55, 0.55, 0.75);
+</script>
+<p>
+    Als je het leuk vindt kun je de broncode van de schildpad bekijken:
+    <a href="https://github.com/jieter/tiny-turtle/blob/gh-pages/tiny-turtle.js">tiny-turtle.js</a>.
+</p>
+
 
 <script src="../tiny-turtle.js"></script>
 <script src="../lab/vendor/png-baker.js"></script>
