Change href target

--- a/tutorial/index.html
+++ b/tutorial/index.html
@@ -297,7 +297,7 @@ cirkel(300);
   Als je er niet uit komt: doe de schildpad na!
 </aside>
 
-<h2><a id="hard" href="#hard">Extra opdrachten</a></h2>
+<h2><a id="extra" href="#extra">Extra opdrachten</a></h2>
 
 <img src="spiraal.png" class="example" />
 <p>Kun je dit voorbeeld na maken?</p>
