Small textual change

--- a/tutorial/index.html
+++ b/tutorial/index.html
@@ -39,12 +39,12 @@
 </p>
 
 <p>
-  <code>forward( stapjes )</code> laat de schildpad lopen.
+  <code>forward( stapjes )</code> laat de schildpad lopen <code>forward(100)</code> voor 100 stapjes, <code>forward(50)</code> voor 50.
 </p>
 
 <p>
   <code>right( hoek )</code> laat de schildpad een bocht naar rechts maken.
-0 = rechtdoor, 90 = naar rechts, 180 is omkeren, etc.
+0 = rechtdoor, 90 = naar rechts, 180 is omkeren, enzovoort.
 </p>
 
 <p>
