--- a/tutorial/index.html
+++ b/tutorial/index.html
@@ -485,7 +485,7 @@ forward(20);
 <div style="clear: both">&nbsp;</div>
 <img src="boom.png" class="example" />
 <p>
-    Dit is een leuke om mee te spelen: deze boom wordt gemaakt door de schildpad
+    Dit is een leuke om mee te spelen: deze boom wordt gemaakt door de schildpad.
 </p>
 <div style="clear: both">&nbsp;</div>
 
