Rename tutorial -> les

--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
 <div id="labs"></div>
 <footer>
   [ <a href="http://github.com/jieter/tiny-turtle" target="_blank">GitHub</a>
-    | <a href="tutorial/">Tutorial</a>
-    | <a id="togetherjs" href="#">Invite a Friend</a>
+    | <a href="les/">Les</a>
+    | <a id="togetherjs" href="#">Iemand anders uitnodigen</a>
   ]
 </footer>
 <script id="sample" type="javascript/sample-code">
