--- a/les/index.html
+++ b/les/index.html
@@ -22,6 +22,10 @@
     <img src="kleur2.png" />
     <img src="kleur4.png" />
 </aside>
+<aside class="panel" style="heigth: 400px; text-align: center">
+    <a href="https://jieter.github.io/tiny-turtle/les/" style="margin-top: 220px; margin-bottom: 220px; text-align: center;">jieter.github.io/tiny-turtle/les/</h1>
+
+</aside>
 <aside class="panel">
     <h3><a id="tips" href="#tips">Tips</a></h3>
 
