--- a/les/index.html
+++ b/les/index.html
@@ -22,8 +22,8 @@
     <img src="kleur2.png" />
     <img src="kleur4.png" />
 </aside>
-<aside class="panel" style="heigth: 400px; text-align: center">
-    <a href="https://jieter.github.io/tiny-turtle/les/" style="margin-top: 220px; margin-bottom: 220px; text-align: center;">jieter.github.io/tiny-turtle/les/</h1>
+<aside class="panel" style="text-align: center">
+    <a href="https://jieter.github.io/tiny-turtle/les/" style="display: block; font-size: 40px; margin-top: 240px; margin-bottom: 240px; text-align: center;">jieter.github.io/tiny-turtle/les/</a>
 
 </aside>
 <aside class="panel">
